# uspark

./: Makefile  README.md
c-lang/: .gitignore  CMakeLists.txt  Makefile  uspark.c
c-lang/libowfat/: compiler.h  str_diff.c  str_len.c  str_start.c
c-lang/misc/: Containerfile
rust-lang/: Cargo.toml
rust-lang/misc/: Containerfile
rust-lang/src/: main.rs
